--- a/styles/home.css
+++ b/styles/home.css
@@ -1,1 +1,22 @@
-/* add home page styles here */
+* {
+    box-sizing: border-box;
+}
+
+body, html {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#logout {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    width: 80px;
+    padding: 3px 8px;
+}
